<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:padding="@dimen/book_list_margin"
        android:paddingBottom="10dp"
        tools:context=".EditBooksActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:text="@string/book_info"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/order_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@color/colorAccent"
            android:text="@string/order_button_lbl"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/edit_isbn"
            style="@style/EditEditText"
            android:hint="@string/hint_isbn"
            android:inputType="number" />

        <EditText
            android:id="@+id/edit_book_name"
            style="@style/EditEditText"
            android:hint="@string/hint_book_name"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/edit_book_price"
            style="@style/EditEditText"
            android:hint="@string/hint_book_price"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingEnd="0dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:text="@string/quantity_lbl"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorAccent" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/minus_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:background="@color/edit_red"
                android:text="@string/minus"
                android:textAllCaps="true"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/edit_book_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="0"
                android:textColor="#000000"
                android:textSize="16sp" />

            <Button
                android:id="@+id/plus_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:text="@string/plus"
                android:textAllCaps="true"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <EditText
            android:id="@+id/edit_book_supplier"
            style="@style/EditEditText"
            android:hint="@string/hint_book_supplier"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/edit_book_supplier_num"
            style="@style/EditEditText"
            android:hint="@string/hint_book_supplier_num"
            android:inputType="phone"
            android:maxLength="10" />

        <LinearLayout
            android:id="@+id/container_book_format"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/book_format"
                android:textAppearance="?android:textAppearanceMedium" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/spinner_book_format"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:paddingEnd="16dp"
                    android:paddingLeft="0dp"
                    android:paddingRight="16dp"
                    android:paddingStart="0dp"
                    android:spinnerMode="dropdown" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent" />

        <EditText
            android:id="@+id/edit_book_genre"
            style="@style/EditEditText"
            android:hint="@string/hint_book_genre"
            android:inputType="textCapWords" />

        <LinearLayout
            android:id="@+id/container_isfiction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:text="@string/book_isfiction"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioGroup
                android:id="@+id/isfiction_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/yes_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:paddingLeft="0dp"
                    android:paddingRight="10dp"
                    android:paddingStart="0dp"
                    android:text="@string/is_fiction_true"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/no_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/is_fiction_false"
                    android:textAppearance="?android:textAppearanceMedium" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>
</ScrollView>